--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </div>
     <div>
         <button onclick="test()">버튼</button>
+        <button onclick="arrow()">버튼2</button>
     </div>
 
 </body>
@@ -41,6 +42,8 @@
         xhr.send();
     }
     
-
+    const arrow = ()=>{
+        alert("hi");
+    }
 </script>
 </html>
