--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div>
         <button onclick="test()">버튼</button>
-        <button onclick="arrow()">버튼2</button>
+        <button onclick="arrow()">버튼</button>
     </div>
 
 </body>
