--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     
     const arrow = ()=>{
         alert("hi");
+        console.log(testPrint);
+    }
+
+    function testPrint(){
+        console.log("hi")
     }
 </script>
 </html>
