--- a/JR.html
+++ b/JR.html
@@ -11,6 +11,7 @@
         <table class="tb">
             <tr>
                 <td>ㅎㅇ1</td><td>ㅂㅇ1</td>
+                <!-- 테이블 정리 -->
             </tr>
             <tr>
                 <td>ㅎㅇ2</td><td>ㅂㅇ2</td>
